--- a/pom.xml
+++ b/pom.xml
@@ -271,11 +271,16 @@
                 </executions>
             </plugin>
 
+            <!-- Surefire Plugin for API Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <!-- Run only API tests (*IT.java) by default -->
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
@@ -294,6 +299,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
+                <configuration>
+                    <!-- Allow skipping via -Dgpg.skip=true -->
+                    <skip>${gpg.skip}</skip>
+                </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
