--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
-                    <skipTests>true</skipTests>
+                    <!-- <skipTests>true</skipTests> -->
                 </configuration>
             </plugin>
 
@@ -299,10 +299,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
-                <configuration>
-                    <!-- Allow skipping via -Dgpg.skip=true -->
-                    <skip>${gpg.skip}</skip>
-                </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
