--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
-                    <!-- <skipTests>true</skipTests> -->
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
 
