--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 9 (Zulu)
+      - name: Set up JDK 8
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: '9'
+          distribution: 'temurin'
+          java-version: '8'
           cache: maven
 
       - name: Run Tests and Generate JaCoCo Report
