--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -26,12 +26,10 @@ jobs:
           cache: maven
 
       - name: Run Tests and Generate JaCoCo Report
-        working-directory: contentstack-java
         run: mvn clean test -Dtest='Test*' jacoco:report -Dgpg.skip=true
 
       - name: Extract and Check Coverage Thresholds
         id: coverage
-        working-directory: contentstack-java
         run: |
           echo "Checking JaCoCo coverage thresholds..."
 
@@ -75,4 +73,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
-          path: contentstack-java/target/site/jacoco/
+          path: target/site/jacoco/
