--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -15,11 +15,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 9
+      - name: Set up JDK 8 (Temurin)
         uses: actions/setup-java@v4
         with:
-          java-version: '9'
-          distribution: 'zulu'
+          distribution: 'temurin'
+          java-version: '8'
+          cache: maven
 
       - name: Enable tests in pom.xml
         run: |
