--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -35,25 +35,27 @@ jobs:
         run: |
           echo "Extracting coverage summary from JaCoCo HTML report..."
 
-          if [ ! -f target/site/jacoco/index.html ]; then
+          REPORT="target/site/jacoco/index.html"
+
+          if [ ! -f "$REPORT" ]; then
             echo "❌ JaCoCo HTML report not found!"
             exit 1
           fi
 
-          # Extract coverage percentages using awk for more reliable extraction
-          COVERAGE_VALUES=$(grep -A10 '<td>Total</td>' target/site/jacoco/index.html | grep -E 'class="ctr2".*[0-9]+%' | sed -E 's/.*>([0-9]+)%<.*/\1/')
-          
-          echo "Debug: All coverage values found:"
-          echo "$COVERAGE_VALUES"
-          
-          INSTRUCTION=$(echo "$COVERAGE_VALUES" | awk 'NR==1')
-          BRANCH=$(echo "$COVERAGE_VALUES" | awk 'NR==2')
+          # Extract the <tfoot> Total row and clean it up
+          TOTAL_ROW=$(grep -A2 "<td>Total</td>" "$REPORT" | tr -d '\n')
 
-          echo "📘 Instruction Coverage: ${INSTRUCTION:-0}%"
-          echo "🌿 Branch Coverage: ${BRANCH:-0}%"
+          # Extract numeric percentages in order (Instruction first, Branch second)
+          PERCENTAGES=($(echo "$TOTAL_ROW" | grep -oE '[0-9]+%' | sed 's/%//g'))
 
-          echo "instruction=${INSTRUCTION:-0}" >> $GITHUB_OUTPUT
-          echo "branch=${BRANCH:-0}" >> $GITHUB_OUTPUT
+          INSTRUCTION=${PERCENTAGES[0]:-0}
+          BRANCH=${PERCENTAGES[1]:-0}
+
+          echo "📘 Instruction Coverage: ${INSTRUCTION}%"
+          echo "🌿 Branch Coverage: ${BRANCH}%"
+
+          echo "instruction=${INSTRUCTION}" >> $GITHUB_OUTPUT
+          echo "branch=${BRANCH}" >> $GITHUB_OUTPUT
 
       - name: 💬 Post coverage summary as PR comment
         uses: marocchino/sticky-pull-request-comment@v2
