--- a/pom.xml
+++ b/pom.xml
@@ -282,7 +282,33 @@
                         <include>**/*IT.java</include>
                     </includes>
                     <skipTests>true</skipTests>
+                    <!-- OPTIMIZED: Parallel execution with controlled concurrency -->
+                    <parallel>classes</parallel>
+                    <threadCount>4</threadCount>
+                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <useUnlimitedThreads>false</useUnlimitedThreads>
+                    <!-- Reuse forks for better performance -->
+                    <reuseForks>true</reuseForks>
+                    <forkCount>2</forkCount>
+                    <!-- Increase timeout for slow tests -->
+                    <forkedProcessTimeoutInSeconds>500</forkedProcessTimeoutInSeconds>
+                    <!-- Better memory management -->
+                    <argLine>-Xmx2048m -XX:MaxMetaspaceSize=512m</argLine>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.22.2</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report-only</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
