--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.contentstack.sdk</groupId>
     <artifactId>java</artifactId>
-    <version>2.3.2</version>
+    <version>2.4.0</version>
     <packaging>jar</packaging>
     <name>contentstack-java</name>
     <description>Java SDK for Contentstack Content Delivery API</description>
@@ -314,7 +314,7 @@
                 <configuration>
                     <!-- Tests are skipped by default; use -Dtest to specify which tests to run -->
                     <!-- Example: -Dtest='*IT' for integration tests, -Dtest='Test*' for unit tests -->
-                    <skipTests>true</skipTests>
+                    <!-- <skipTests>true</skipTests> -->
                     <!-- OPTIMIZED: Parallel execution with controlled concurrency -->
                     <parallel>classes</parallel>
                     <threadCount>4</threadCount>
